--- a/css/styles.css
+++ b/css/styles.css
@@ -45,22 +45,58 @@ body {
 /* reset styles */
 
 .link {
+  display: block;
   text-decoration: none;
+  margin: 0;
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
+.section {
+  margin: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.img {
+  display: block;
+}
+/* container */
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* header */
+
+.post-header {
+  display: flex;
+  align-items: center;
+}
+
+.header-page {
+  padding-top: 24px;
+  border-bottom: 1px solid #ffffff;
+}
+
 /* Logo header */
 
 .logo {
+  display: block;
+  margin-top: 0;
+
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-
   color: var(--accent-color);
 }
 
@@ -69,8 +105,19 @@ body {
 }
 
 /* nav */
+.nav-list {
+  display: flex;
+  margin-left: 93px;
+}
+
+.nav-list .item + .item {
+  margin-left: 50px;
+}
 
 .nav-list .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -88,6 +135,15 @@ body {
 
 /* contact-header */
 
+.Contact-list {
+  display: flex;
+  margin-left: 331px;
+}
+
+.Contact-list .item + .item {
+  margin-left: 50px;
+}
+
 .Contact-list .link {
   color: var(--primery-text-color);
   font-weight: 500;
@@ -102,28 +158,38 @@ body {
 
 /* Hero */
 .hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+  margin-top: 0;
+  margin-bottom: 0;
+  text-align: center;
   background-color: var(--dark-bg-cl);
 }
 .main-title {
+  margin: 0;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--additional-color);
 }
 
 .hero-btn {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 34px;
+
   font-family: inherit;
   font-size: 16px;
   font-weight: 700;
   line-height: 1.88;
   letter-spacing: 0.06em;
+  text-align: center;
   cursor: pointer;
 
   background-color: var(--accent-color);
-
   color: var(--additional-color);
 }
 
@@ -135,7 +201,35 @@ body {
 
 /* Features */
 
+.feature {
+  display: flex;
+  padding-top: 94px;
+  padding-bottom: 94px;
+  margin-top: 0;
+}
+
+.feature-list {
+  display: flex;
+}
+
+.feature-item {
+  display: block;
+  width: 270px;
+  margin-right: 30px;
+}
+
+.feature-item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.title {
+  margin: 0;
+}
+
 .feature-list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
@@ -145,12 +239,35 @@ body {
 }
 
 .description {
+  margin: 0;
   line-height: 1.71;
 }
 
 /* Section */
 
+.work {
+  display: flex;
+  padding-top: 0;
+  padding-bottom: 94px;
+  margin-top: 0;
+}
+
+.work-list {
+  display: flex;
+}
+
+.work-item {
+  margin-right: 30px;
+}
+
+.work-item:nth-child(3n) {
+  margin-right: 0;
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -162,18 +279,33 @@ body {
 /* team */
 
 .team {
-  background-color: var(--light-bg-cl);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 
 .team .name-item {
+  margin-right: 30px;
+  text-align: center;
   background-color: var(--additional-color);
 }
 
+.name-item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.team-img {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
 .team .name-list {
+  display: flex;
   color: var(--title-text-color);
 }
 
 .name-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   font-weight: 500;
   line-height: 1.19;
 
@@ -181,22 +313,45 @@ body {
 }
 
 .job-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+
   font-size: 16px;
   line-height: 1.19;
   color: var(--primery-text-color);
 }
+
 /* Portfolio */
 
 /* main for portfolio */
 
+.main-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* Filters */
 
+.filter-list {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 34px;
+}
+
+.filter-list .btn-filter + .btn-filter {
+  margin-left: 8px;
+}
+
 .btn-filter .btn {
+  display: inline-block;
+  border-radius: 2px;
+  padding: 6px 22px;
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
-  letter-spacing: 00.03em;
+  letter-spacing: 0.03em;
   text-align: center;
 
   cursor: pointer;
@@ -213,11 +368,35 @@ body {
 
 /* Projects section  */
 
-.Project .link {
-  background-color: var(--bg-project);
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+
+  background-color: var(--additional-color);
 }
 
-.Project .title {
+.project {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  border: 1px solid var(--bg-project);
+  background-color: var(--additional-color);
+}
+
+.project:nth-child(3n) {
+  margin-right: 0;
+}
+
+.project:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.project .title {
+  display: inline-block;
+  margin-top: 10px;
+  margin-bottom: 4px;
+  margin-left: 24px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -226,15 +405,22 @@ body {
   color: var(--title-text-color);
 }
 
-.Project .parceling {
+.project .parceling {
+  display: block;
+  margin-bottom: 0;
+  margin-top: 0;
+  margin-left: 24px;
   font-weight: 400;
   line-height: 1.88;
 
   color: var(--primery-text-color);
 }
+
 /* footer */
 
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--dark-bg-cl);
 }
 
@@ -245,6 +431,14 @@ body {
 }
 
 /* contacts footer */
+
+.contacts .item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
+.adress-list {
+  padding-top: 20px;
+}
 
 .adress-list .link {
   font-style: normal;
