--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,26 @@ body {
   background-color: var(--additional-color);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+.img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.adress {
+  font-style: normal;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -62,9 +82,6 @@ body {
   padding-bottom: 94px;
 }
 
-.img {
-  display: block;
-}
 /* container */
 
 .container {
@@ -440,16 +457,15 @@ body {
   padding-top: 20px;
 }
 
-.adress-list .link {
-  font-style: normal;
+.adress .link {
   font-weight: 400;
   line-height: 1.71;
 
   color: var(--additional-color);
 }
 
-.adress-list .link:hover,
-.adress-list .link:focus {
+.adress .link:hover,
+.adress .link:focus {
   color: var(--accent-color);
 }
 
