--- a/css/styles.css
+++ b/css/styles.css
@@ -18,16 +18,22 @@
   --bg-project: #eeeeee;
   --bg-header: #ececec;
 
+  /* --indent: 30px;
+  --items: 3; */
+
   /* others */
 }
 
 body {
+  margin: 0;
   font-family: var(--main-font);
   font-size: 14px;
   letter-spacing: 0.03em;
   color: var(--primery-text-color);
   background-color: var(--additional-color);
 }
+
+/* reset styles */
 
 h1,
 h2,
@@ -39,7 +45,7 @@ p {
   margin: 0;
 }
 
-.img {
+img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -47,6 +53,32 @@ p {
 
 .adress {
   font-style: normal;
+}
+
+.section {
+  margin: 0;
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
+}
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.link {
+  display: block;
+  text-decoration: none;
+  margin: 0;
+  color: currentColor;
 }
 
 .visually-hidden {
@@ -62,46 +94,16 @@ p {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-/* reset styles */
-
-.link {
-  display: block;
-  text-decoration: none;
-  margin: 0;
-}
-
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.section {
-  margin: 0;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-/* container */
-
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-}
 
 /* header */
 
-.post-header {
-  display: flex;
-  align-items: center;
+.header-page {
+  border-bottom: 1px solid var(--bg-header);
 }
 
-.header-page {
-  padding-top: 24px;
-  border-bottom: 1px solid #ffffff;
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
 /* Logo header */
@@ -109,7 +111,7 @@ p {
 .logo {
   display: block;
   margin-top: 0;
-
+  margin-right: 93px;
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
@@ -122,14 +124,25 @@ p {
 }
 
 /* nav */
+
+.header-nav {
+  margin-right: auto;
+}
 .nav-list {
   display: flex;
-  margin-left: 93px;
+  gap: 40px;
 }
 
-.nav-list .item + .item {
-  margin-left: 50px;
+/* .nav-item {
+  margin-right: 50px;
 }
+
+.nav-item:last-child {
+  margin-right: 0;
+} */
+/* .nav-list .item + .item {
+  margin-left: 50px;
+} */
 
 .nav-list .link {
   display: block;
@@ -152,38 +165,42 @@ p {
 
 /* contact-header */
 
-.Contact-list {
+.contact-list {
   display: flex;
-  margin-left: 331px;
 }
 
-.Contact-list .item + .item {
+/* .Contact-list .item + .item {
   margin-left: 50px;
-}
+} */
 
-.Contact-list .link {
+.contact-list .link {
+  padding: 32px 0;
   color: var(--primery-text-color);
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
-.Contact-list .link:hover,
-.Contact-list .link:focus {
+.contact-list .link:hover,
+.contact-list .link:focus {
   color: var(--accent-color);
 }
 
+.contact-mail {
+  margin-right: 50px;
+}
+
 /* Hero */
+
 .hero {
   padding-top: 200px;
   padding-bottom: 200px;
-  margin-top: 0;
-  margin-bottom: 0;
   text-align: center;
   background-color: var(--dark-bg-cl);
 }
 .main-title {
-  margin: 0;
+  margin: 0 auto;
+  width: 696px;
   margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
@@ -196,7 +213,8 @@ p {
 .hero-btn {
   display: inline-block;
   border-radius: 4px;
-  padding: 10px 34px;
+  padding: 10px 32px;
+  border: none;
 
   font-family: inherit;
   font-size: 16px;
@@ -219,32 +237,29 @@ p {
 /* Features */
 
 .feature {
-  display: flex;
   padding-top: 94px;
   padding-bottom: 94px;
-  margin-top: 0;
 }
 
 .feature-list {
   display: flex;
+  gap: 30px;
 }
 
 .feature-item {
   display: block;
   width: 270px;
-  margin-right: 30px;
 }
 
-.feature-item:nth-child(4n) {
+/* .feature-item:nth-child(4n) {
   margin-right: 0;
-}
+} */
 
-.title {
+/* .title {
   margin: 0;
-}
+} */
 
 .feature-list .title {
-  margin-top: 0;
   margin-bottom: 10px;
 
   font-size: 14px;
@@ -256,33 +271,17 @@ p {
 }
 
 .description {
-  margin: 0;
   line-height: 1.71;
 }
 
 /* Section */
 
 .work {
-  display: flex;
   padding-top: 0;
   padding-bottom: 94px;
-  margin-top: 0;
-}
-
-.work-list {
-  display: flex;
-}
-
-.work-item {
-  margin-right: 30px;
-}
-
-.work-item:nth-child(3n) {
-  margin-right: 0;
 }
 
 .section-title {
-  margin-top: 0;
   margin-bottom: 50px;
 
   font-weight: 700;
@@ -293,34 +292,50 @@ p {
   color: var(--title-text-color);
 }
 
+.work-list {
+  display: flex;
+  gap: 30px;
+}
+
+/* .work-item {
+  margin-right: 30px;
+}
+
+.work-item:nth-child(3n) {
+  margin-right: 0;
+} */
+
 /* team */
 
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  background-color: var(--light-bg-cl);
 }
 
-.team .name-item {
-  margin-right: 30px;
-  text-align: center;
-  background-color: var(--additional-color);
-}
-
-.name-item:nth-child(4n) {
-  margin-right: 0;
-}
-
-.team-img {
-  margin-top: 0;
-  margin-bottom: 30px;
-}
 .team .name-list {
   display: flex;
   color: var(--title-text-color);
+  gap: 30px;
+}
+
+.team .name-item {
+  background-color: var(--additional-color);
+}
+
+/* .name-item:nth-child(4n) {
+  margin-right: 0;
+} */
+
+/* .team-img {
+  margin-top: 0;
+  margin-bottom: 30px;
+} */
+
+.name-content {
+  padding: 30px 70px;
+  white-space: nowrap;
 }
 
 .name-title {
-  margin-top: 0;
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -330,9 +345,6 @@ p {
 }
 
 .job-title {
-  margin-top: 0;
-  margin-bottom: 30px;
-
   font-size: 16px;
   line-height: 1.19;
   color: var(--primery-text-color);
@@ -353,16 +365,18 @@ p {
   display: flex;
   justify-content: center;
   margin-bottom: 34px;
+  gap: 8px;
 }
 
-.filter-list .btn-filter + .btn-filter {
+/* .filter-list .btn-filter + .btn-filter {
   margin-left: 8px;
-}
+} */
 
 .btn-filter .btn {
   display: inline-block;
-  border-radius: 2px;
+  border-radius: 4px;
   padding: 6px 22px;
+  border: none;
 
   font-family: inherit;
   font-weight: 500;
@@ -388,17 +402,22 @@ p {
 .project-list {
   display: flex;
   flex-wrap: wrap;
-
-  background-color: var(--additional-color);
+  gap: 30px;
 }
 
-.project {
+/* .project {
+  flex-basis: calc((100% - 30px * 3 - 1) / 3);
+} */
+.project-subscription {
+  padding: 20px 24px;
+  border: 1px solid var(--bg-project);
+  border-top: none;
+}
+
+/* .project {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-
-  border: 1px solid var(--bg-project);
-  background-color: var(--additional-color);
 }
 
 .project:nth-child(3n) {
@@ -407,13 +426,10 @@ p {
 
 .project:nth-last-child(-n + 3) {
   margin-bottom: 0;
-}
+} */
 
-.project .title {
-  display: inline-block;
-  margin-top: 10px;
+.project .project-title {
   margin-bottom: 4px;
-  margin-left: 24px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -423,11 +439,8 @@ p {
 }
 
 .project .parceling {
-  display: block;
-  margin-bottom: 0;
-  margin-top: 0;
-  margin-left: 24px;
   font-weight: 400;
+  font-size: 16px;
   line-height: 1.88;
 
   color: var(--primery-text-color);
@@ -453,7 +466,7 @@ p {
   margin-bottom: 9px;
 }
 
-.adress-list {
+.adress {
   padding-top: 20px;
 }
 
